# py-producers-dashboard

./: .buildconfig  README.md  meson.build  producers-dasboard.in  producers-dashboard.in
dashboard/: __init__.py  application.py  authentication.py  custom_renderers.py  models.py  remote.py  utilities.py  window.py
dashboard/views/: utils.py  views.py
dashboard/widgets/: aboutdialog.py  golivepage.py  headerbar.py  livepage.py  loginpage.py  message.py  show.py  showspage.py  waitpage.py
data/: GolivePage.ui  HeaderBar.ui  LivePage.ui  LoginPage.ui  MainWindow.ui  Message.ui  Show.ui  ShowsPage.ui  WaitPage.ui  application.css  gr.uoc.radio.dashboard.gresource.xml  gr.uoc.radio.dashboard.gschema.xml  meson.build
